# SchemerFuzzer

./: CONTRIBUTING.md  LICENSE.txt  README.rst  setup.cfg  setup.py
examples/: test-regex.json
schemerfuzzer/basetypes/: __init__.py
schemerfuzzer/util/: __init__.py
scripts/: install  test-update
test/: test_simple.py
