[metadata]
name = SchemerFuzzer
version = 0.0.1
description = My package description
long_description = file: README.txt, LICENSE.txt
keywords = jsonschema, json, testing
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[options]
dependency_links =
    git+https://github.com/svanellewee/sre_yield.git/@1.0.1#egg=sre_yield-1.0.1
install_requires = 
    jsonschema >= "1.0.0"
    sre_yield == "1.0.1"
setup_requires =
    pytest-runner
tests_require =
    pytest

[options.package_data]
* = *.txt, *.rst

[aliases]
test=pytest
